removed fixed spacing and added flex property

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,17 @@
   font-size: large;
 }
 
+.cards {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
