--- a/src/Components/CharacterCard/CharacterCard.css
+++ b/src/Components/CharacterCard/CharacterCard.css
@@ -1,13 +1,11 @@
 .card {
   background: #fff;
   border-radius: 2px;
-  height: 200px;
-  margin: 1rem;
+  height: 250px;
+  margin: 3rem;
   position: relative;
-  width: 200px;
+  width: 250px;
   box-shadow: 0 3px 6px #999, 0 3px 6px #999;
-  text-align: center;
-  display: inline-block;
 }
 
 .card > .img-container {
